tests/phase_00_lexer_errors/valid/06_concat_single_ok.hulk
// El lexer debe reconocer @ como operador de concatenacion simple.
"a" @ "b";
