tests/phase_00_lexer_errors/invalid/10_bad_compound_operator.hulk
// El lexer debe rechazar :> porque no es un operador definido del lenguaje.
a :> b;
